contrast corrected

--- a/css/portal.css
+++ b/css/portal.css
@@ -56,7 +56,7 @@ p {
 #date {
     margin-top: 0;
     font-size: small;
-    color:rgb(248, 204, 122)
+    color:rgb(150, 241, 236)
 }
 
 #copyright {
